10 things to help

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
         max-width: calc(100vw - 128px); 
       }
 
+      li {
+        margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+      }
 
 
 .videoWrapper {
@@ -157,7 +163,7 @@
 
       <!-- <h3 style="margin-bottom: 10px">current projects</h3> -->
 
-      <img src="Network-State-Genesis-PASSPORT-LATEST.jpg" style="max-width: 100%;">
+      <img src="Network-State-Genesis-PASSPORT-LATEST.jpg" style="max-width: 100%; border: 1px solid white;">
 
       <br>
       <br>
@@ -177,6 +183,7 @@
   <br>
 
       <h3 style="margin-bottom: 10px; font-size: 25px">Smart contract on Ethereum</h3>
+      <p>Despite the current gas prices, ETH remains the dominant chain.</p>
       <p>Until 4th of July <i>(Independence Day)</i>, the fixed price is 0.07 ETH</p>
       <p>From 5th of July, 0.1% increase with each new passport minted.</p>
       <p>1 WBTC always gets you one, regardless of the current ETH price.</p>
@@ -196,6 +203,28 @@
       <p>Source code on <a href="https://github.com/genesisdotre/network-state-genesis">GitHub</a>.</a></p>
       <p>Use 200,000 gas (<a href="https://github.com/MetaMask/metamask-extension/issues/7772">issue on GitHub</a>) otherwise transaction will fail.</p>
       <p>Use a wallet that you own (not an exchange), <a href="https://metamask.zendesk.com/hc/en-us/articles/360058238591-NFT-tokens-in-MetaMask-wallet">MetaMask should be OK</a>.</p>
+
+      <img src="gas-limit.png" style="max-width: 100%;">
+
+      <br>
+      <br>
+      <br>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">Support the work</h3>
+
+      <ol>
+        <li>Get yourself a passport, buy the NFT</li>
+        <li>Spread the word, encourage others to join</li>
+        <li>Introductions to media, press, podcasters</li>
+        <li>Subscribe to the newsletter (WIP)</li>
+        <li>Follow us on Twitter <a href="https://twitter.com/genesisdotre">@genesisdotre</a> and retweet</li>
+        <li>Join our Discord (WIP)</li>
+        <li>Introduce yourself on the forum (WIP)</li>
+        <li>Contribute on the <a href="/wiki">wiki</a></li>
+        <li>Participate in community calls ☎️☎️☎️ (WIP)</li>
+        <li>Be happy, live according to the values (always)</li>
+      </ol>
+
 
 
       <style> .emoji {
