--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <li>Spread the word, encourage others to join</li>
         <li>Introductions to media, press, podcasters</li>
         <li>Subscribe to the newsletter (WIP)</li>
-        <li>Follow us on Twitter <a href="https://twitter.com/genesisdotre">@genesisdotre</a> and retweet</li>
+        <li>Follow us on Twitter <a href="https://twitter.com/genesisdotre">@genesisdotre</a> and <a href="/retweet">retweet</a></li>
         <li>Join our Discord (WIP)</li>
         <li>Introduce yourself on the forum (WIP)</li>
         <li>Contribute on the <a href="/wiki">wiki</a></li>
