--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
       <h3 style="margin-bottom: 10px; font-size: 25px">Mission / vision / manifesto</h3>
-      <p>Agricultural revolution. Industral revolution. Digital revolution.</p>
+      <p>Agricultural revolution. Industrial revolution. Digital revolution.</p>
       <p>COVID accelerated transition to digital.</p>
       <p>The United Nations were created in 1945 after WW2.</p>
       <p>Now we have yet another new world order and a new set of challenges.</p>
