--- a/index.html
+++ b/index.html
@@ -210,19 +210,28 @@
       <br>
       <br>
 
-      <h3 style="margin-bottom: 10px; font-size: 25px">Support the work</h3>
+      <h3 style="margin-bottom: 10px; font-size: 25px">Support the project</h3>
 
       <ol>
-        <li>Get yourself a passport, buy the NFT</li>
+        <li>Get yourself a passport, buy the NFT, 0.07 ETH<br><br><br>
+
+
+          <code style="padding: 15px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
+
+          <br><br>
+
+
+        </li>
         <li>Spread the word, encourage others to join</li>
-        <li>Introductions to media, press, podcasters</li>
-        <li>Subscribe to the newsletter (WIP)</li>
+        <li>Introductions to media, press, influencers</li>
         <li>Follow us on Twitter <a href="https://twitter.com/genesisdotre">@genesisdotre</a> and <a href="/retweet">retweet</a></li>
+        <li>Contribute on the <a href="/wiki">wiki</a></li>
+        <li>Be happy, live according to the values: <a href="https://gateway.pinata.cloud/ipfs/QmYLhBxgdUCCygX5GBB764PwUUQknFBjERmPKu22DfqmFS">founding document</a></a></li>
+        <!-- <li>Subscribe to the newsletter (WIP)</li>
         <li>Join our Discord (WIP)</li>
         <li>Introduce yourself on the forum (WIP)</li>
-        <li>Contribute on the <a href="/wiki">wiki</a></li>
-        <li>Participate in community calls ☎️☎️☎️ (WIP)</li>
-        <li>Be happy, live according to the values (always)</li>
+        <li>Participate in community calls ☎️☎️☎️ (WIP)</li> -->
+      
       </ol>
 
 
