--- a/retweet/index.html
+++ b/retweet/index.html
@@ -102,10 +102,9 @@
 
       <h1 style="margin-bottom: 10px; font-size: 25px">Please retweet</h1>
       <p>Just like being on the Oprah show, our deliberate marketing straegy is to get retweets from Elon.</p>
-      <p>Latest retweetable one: <a href="https://twitter.com/genesisdotre/status/1385665300570513409">twitter.com/genesisdotre/status/1385665300570513409</a></p>
+      <p>Latest retweetable one: <a href="https://twitter.com/genesisdotre/status/1388587740686692357">twitter.com/genesisdotre/status/1388587740686692357</a></p>
 
-      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Planetary Council.<br><br>Galactic Federation.<br><br>What problem are you actually solving?<br><br>🇺🇳UN was created in 1945 after WW2. <br><br>The world has moved on, now we have new set of challenges (and completely different technology)<br><br>Join our state!<br><br>Get yourself a passport NFT (surfing the hype) <a href="https://t.co/X1HuQPnkL4">pic.twitter.com/X1HuQPnkL4</a></p>&mdash; Network State Genesis (@genesisdotre) <a href="https://twitter.com/genesisdotre/status/1385665300570513409?ref_src=twsrc%5Etfw">April 23, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Which of the ideas should <a href="https://twitter.com/BoredElonMusk?ref_src=twsrc%5Etfw">@BoredElonMusk</a> pitch to <a href="https://twitter.com/elonmusk?ref_src=twsrc%5Etfw">@ElonMusk</a>?<br><br>Maybe the Elongated (not gated) City?<br><br>Abundant food, water, energy could solve a lot of problems occurring in the Sub-Saharan Africa<br><br>Thread 👇👇👇 <a href="https://t.co/uTzpWCWMtq">pic.twitter.com/uTzpWCWMtq</a></p>&mdash; Network State Genesis (@genesisdotre) <a href="https://twitter.com/genesisdotre/status/1388587740686692357?ref_src=twsrc%5Etfw">May 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     </div>
 
