--- a/index.html
+++ b/index.html
@@ -155,12 +155,34 @@
 
       <h3 style="margin-bottom: 10px; font-size: 25px">Smart contract on Ethereum</h3>
 
-      <br><br>
+      <br>
 
       <code style="padding: 15px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
 
-      <br><br>
+      <br><br><br>
 
+      <p>Until 4th of July — fixed price was 0.07 ETH</p>
+      <p>From 5th of July — 0.1% increase with each new passport minted.</p>
+      <p>You can send 0.1 ETH and the excess amount will be refunded.</p>
+
+      <br>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">Mission vision manifesto</h3>
+
+<!--       <div style="padding: 15px; border: 1px solid white; font-size: 1.2em; display: inline-block; line-height: 2.2em; font-weight: bold; margin-top: 12px;">
+        new models of trust and governance<br>
+        architecting the new world<br>
+        operating system for the planet(s)
+      </div>
+
+      <p>Agricultural revolution. Industrial revolution. Digital revolution.</p>
+      <p>COVID accelerated transition to digital.</p> -->
+      <p>Check our <a href="Network-State-Genesis-WHITEPAPER-compressed.pdf">founding document</a>.</p>
+
+      <br>
+      <br>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">Technical details</h3>
 
       <!-- <p>Despite gas prices, ETH remains the dominant chain.</p> -->
       <p>Source on <a href="https://etherscan.io/address/0x3ef61d25b2bf303de52efdd5e50698bed8f9eb8d#code">Etherscan.</a></p>
@@ -170,36 +192,18 @@
       <img src="gas-limit.png" style="max-width: 100%;">
 
       <p>Use a wallet that you own (not an exchange), <a href="https://metamask.zendesk.com/hc/en-us/articles/360058238591-NFT-tokens-in-MetaMask-wallet">MetaMask should be OK</a>.</p>
-      <p>Until 4th of July — fixed price is 0.07 ETH</p>
-      <p>From 5th of July — 0.1% increase with each new passport minted.</p>
       <p>1 WBTC always gets you one, regardless of the current ETH price.</p>
       <p>Most likely there will be an airdrop for early supporters.</p>
 
       <br>
       <br>
 
-      <h3 style="margin-bottom: 10px; font-size: 25px">Mission | vision | manifesto</h3>
 
-      <div style="padding: 15px; border: 1px solid white; font-size: 1.2em; display: inline-block; line-height: 2.2em; font-weight: bold; margin-top: 12px;">
-        new models of trust and governance<br>
-        architecting the new world<br>
-        operating system for the planet(s)
-      </div>
-
-      <p>Agricultural revolution. Industrial revolution. Digital revolution.</p>
-      <p>COVID accelerated transition to digital.</p>
-      <p>Check our <a href="Network-State-Genesis-WHITEPAPER-compressed.pdf">founding document</a>.</p>
 
       
 
       <!-- <h3 style="margin-bottom: 10px; font-size: 20px">Planetary Council</h3> -->
       <!-- <h3 style="margin-bottom: 10px; font-size: 20px">Galactic Federation</h3> -->
-
-
-
-
-      <br>
-      <br>
 
 
 
