--- a/book/index.html
+++ b/book/index.html
@@ -121,12 +121,14 @@
       </style>
 
 
-    <p><strong style="font-size:1.2em;">1️⃣ Land Use.</strong><br>Food system. Less crops to feed livestock. Rebuilding soil and natural ecosystems.</p>
+    <!-- <p><strong style="font-size:1.2em;">1️⃣ Land Use.</strong><br>Food system. Less crops to feed livestock. Rebuilding soil and natural ecosystems.</p>
     <p><strong style="font-size:1.2em;">2️⃣ Emissions Trading System.</strong><br>No more free allowances. Unified global standard supported by enforceable sanctions.</p>
-    <p><strong style="font-size:1.2em;">3️⃣ Energy Storage.</strong><br>You can install solar panels but it will not reduce the dependency on fossil fuels - we are using peaker plants to supply electricity during peak demand.</p>
+    <p><strong style="font-size:1.2em;">3️⃣ Energy Storage.</strong><br>You can install solar panels but it will not reduce the dependency on fossil fuels - we are using peaker plants to supply electricity during peak demand.</p> -->
 
     <div class="title">POST-COVID</div>
-  <p>Everything remains valid.<br>The only difference - humanity is ready to make the shift!</p>
+  <p>Everything remains valid.<br><br>The only difference - humanity is ready to make the shift!</p>
+
+  <p>See also <a href="https://genesis.re">Network State Genesis</a> and <a href="https://planetarycouncil.org">Planetary Council</a></p>
   <!-- <p>The book covers many other things and many interdependencies in more detail.</p> -->
 
 
@@ -165,8 +167,8 @@
       <br>
 
       <p>
-        Contact me anytime: <a href="mailto:email@genesis.re">email@genesis.re</a><br>
-        Follow me on Twitter: <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a>
+        Contact me anytime: <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
+        Follow me on Twitter: <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a> and <a href="https://twitter.com/genesisdotre">@genesisdotre</a>
       </p>
 
       
