Joanna added to the website

--- a/index.html
+++ b/index.html
@@ -424,6 +424,17 @@
         <a href="https://marsrobertson.com">marsrobertson.com</a><br>
         <div class="clearfix"></div>
 
+        <br>
+
+        <img src="www/images/joanna-picetti.jpg" height="90" style="float:left; margin-right: 15px">
+
+        <strong>Joanna Picetti</strong><br>
+        Hacker Girl<br>
+        <a href="https://twitter.com/joannapicetti">@joannapicetti</a><br>
+        <a href="mailto:joanna@jp.network">joanna@jp.network</a><br>
+        <a href="https://jp.network">jp.network</a><br>
+        <div class="clearfix"></div>
+
       </div>
 
     </div>
