--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
       <p>Become a member of the <a href="https://PlanetaryCouncil.org">Planetary Council</a>.</p>
 
       <br>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">The time is now</h3>
+      
       <br>
 
       Ethereum: <code style="padding: 15px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
@@ -189,10 +192,6 @@
       <p>Current price: <span id="loadingBar">.....</span>   <span id="currentPrice"></span></p>
 
       <p>Each purchase increases the price by 0.1%</p>
-
-      <p>Source on <a href="https://etherscan.io/address/0x3ef61d25b2bf303de52efdd5e50698bed8f9eb8d#code">Etherscan.</a></p>
-
-      <p>Source code on <a href="https://github.com/genesisdotre/network-state-genesis">GitHub</a>.</a></p>
 
       <!-- <br>
       <button class="golden-btn" style="font-size:1.6em; font-weight: bold;" id="buynow">Buy now</button>
@@ -226,6 +225,11 @@
       <br>
 
       <h3 style="margin-bottom: 10px; font-size: 25px">Technical details</h3>
+
+      <p>Source on <a href="https://etherscan.io/address/0x3ef61d25b2bf303de52efdd5e50698bed8f9eb8d#code">Etherscan.</a></p>
+
+      <p>Source code on <a href="https://github.com/genesisdotre/network-state-genesis">GitHub</a>.</a></p>
+
 
       <!-- <p>Despite gas prices, ETH remains the dominant chain.</p> -->
 
