QR code + new avatar + header

--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
       Ethereum: <code style="padding: 15px; border: 1px solid white;">0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d</code>
       <!-- https://chart.googleapis.com/chart?chs=400x400&chld=L|2&cht=qr&chl=ethereum:0x3EF61d25b2Bf303DE52efdd5e50698BED8f9eB8d -->
 
+      <br>
+      <br>
+      <br>
+
+      <img src="qrcode-ethaddress.png" height="200">
+
       <br><br><br>
 
       <!-- <img width=250 src="genesis-qr-code.png"> -->
@@ -240,6 +246,13 @@
       <p>Current price: <span id="loadingBar">.....</span>   <span id="currentPrice"></span></p>
 
       <p>Each purchase increases the price by 0.1%</p>
+
+      <h3 style="margin-bottom: 10px; font-size: 25px">You can also use card</h3>
+
+      <p>The passport will be sent later on...</p>
+
+
+
       <button class="buy-button" @click="showModal = true">Buy now</button>
       <div x-show="showModal"  class="modal active">
                  <div style="text-align: center; display: flex;gap: 15px;flex-direction: column;">
@@ -383,11 +396,6 @@
 <!-- <span class="emoji">🔮</span> Proud member of <a href="https://www.abundance.community/members/3362617">Abundance Digital</a> with Peter Diamandis<br><br> -->
 
 
-      <br>
-      <br>
-      <br>
-
-
       <!-- <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%"> -->
 
       <!-- <p>Supporting <a href="https://rebellion.earth/">Extinction Rebellion</a></p> -->
@@ -491,13 +499,16 @@
 
         <br> -->
 
-        <img src="www/images/mars-robertson.jpg" height="90" style="float:left; margin-right: 15px">
+        <img src="marsrobertson.jpg" height="90" style="float:left; margin-right: 15px">
 
-        <strong>Mars Robertson</strong><br>
+        <strong>Mars Robertson 💫</strong><br>
         <!-- Chief Integration Officer<br> -->
-        <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a><br>
-        <a href="mailto:email@genesis.re">email@genesis.re</a><br>
-        <a href="https://marsrobertson.com">marsrobertson.com</a><br>
+        <br>
+        <a href="https://twitter.com/marsXrobertson">@marsXRobertson</a> on Twitter<br>
+        <!-- <a href="mailto:email@genesis.re">email@genesis.re</a><br>
+        <a href="https://marsrobertson.com">marsrobertson.com</a><br> -->
+        <br>
+        <a href="https://https://t.me/marsXR">@marsXR</a> on Telegram
         <div class="clearfix"></div>
 
         <!-- such as embarassing shitshow, abusive narcissistic psychopath -->
