--- a/stripe.html
+++ b/stripe.html
@@ -247,7 +247,7 @@
 
       <p>Each purchase increases the price by 0.1%</p>
 
-      <!-- <h3 style="margin-bottom: 10px; font-size: 25px">You can also use card</h3>
+      <h3 style="margin-bottom: 10px; font-size: 25px">You can also use card</h3>
 
       <p>The passport will be sent later on...</p>
 
@@ -262,16 +262,19 @@
                     </div>
                     <form id="payment-form">
                         <div id="link-authentication-element">
+                             <!-- Elements will create authentication element here -->
                          </div>
                         <div id="payment-element">
+                             <!-- Elements will create form elements here -->
                         </div>
                         <button id="submit" class="buy-button" style="margin-top:15px; padding:4px 35px">Buy now</button>
                         <div id="error-message">
+                            <!-- Display error message to your customers here -->
                         </div>
                     </form>
                 </div>
       </div>
-      <div x-show="showModal" class="overlay active" @click="showModal = false"></div> -->
+      <div x-show="showModal" class="overlay active" @click="showModal = false"></div>
 
       <!-- <br>
       <button class="golden-btn" style="font-size:1.6em; font-weight: bold;" id="buynow">Buy now</button>
