--- a/index.html
+++ b/index.html
@@ -247,11 +247,9 @@
 
       <p>Each purchase increases the price by 0.1%</p>
 
-      <!-- <h3 style="margin-bottom: 10px; font-size: 25px">You can also use card</h3>
+    <h3 style="margin-bottom: 10px; font-size: 25px">You can also use 💳</h3>
 
       <p>The passport will be sent later on...</p>
-
-
 
       <button class="buy-button" @click="showModal = true">Buy now</button>
       <div x-show="showModal"  class="modal active">
@@ -271,7 +269,7 @@
                     </form>
                 </div>
       </div>
-      <div x-show="showModal" class="overlay active" @click="showModal = false"></div> -->
+      <div x-show="showModal" class="overlay active" @click="showModal = false"></div>
 
       <!-- <br>
       <button class="golden-btn" style="font-size:1.6em; font-weight: bold;" id="buynow">Buy now</button>
