--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
 
       <p>Each purchase increases the price by 0.1%</p>
 
+      <p>You can send 0.1 ETH and you'll receive a refund.</p>
+
     <h3 style="margin-bottom: 10px; font-size: 25px">You can also use 💳</h3>
 
       <p>The passport will be sent later on...</p>
