wider modal, darker modal bg, add return to homepage link

--- a/return.html
+++ b/return.html
@@ -111,6 +111,7 @@
 				check your email. We will be contacting you shortly to obtain your
 				Ethereum address where we'll send the Passport NFT.
 			</p>
+			<a href="/index.html">Return to homepage</a>
 		</div>
 	</body>
 </html>
