--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             position: fixed;
             top: 50%;
             left: 50%;
+            width: 88vw;
+            max-width: 450px;
             transform: translate(-50%, -50%);
             background-color: #00000056;
             backdrop-filter: blur(10px);
@@ -61,7 +63,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.85);
+            backdrop-filter: blur(20px);
             z-index: 999;
         }
 
