--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
       <br>
 
       <h3 style="margin-bottom: 10px; font-size: 25px">The time is now</h3>
+
+      <p>Become a citizen of the Network State Genesis.</p>
+
+      <p>Limited edition of 1000, then physical passport will happen.</p>
       
       <br>
 
@@ -251,7 +255,7 @@
 
     <h3 style="margin-bottom: 10px; font-size: 25px">You can also use 💳</h3>
 
-      <p>The passport will be sent later on...</p>
+      <p>The NFT passport will be sent later on.</p>
 
       <button class="buy-button" @click="showModal = true">Buy now</button>
       <div x-show="showModal"  class="modal active">
@@ -571,7 +575,7 @@
           dotCount++;
 
           if (dotCount <= 5) {
-              setTimeout(updateLoadingBar, 1000); // Call this function again after 1 second
+              setTimeout(updateLoadingBar, 250); // Call this function again after 0.25 second
           }
       }
 
