--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             position: fixed;
             top: 50%;
             left: 50%;
+            width: 88vw;
+            max-width: 450px;
             transform: translate(-50%, -50%);
             background-color: #00000056;
             backdrop-filter: blur(10px);
@@ -61,7 +63,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.85);
+            backdrop-filter: blur(20px);
             z-index: 999;
         }
 
@@ -258,7 +261,7 @@
       <p>The NFT passport will be sent later on.</p>
 
       <button class="buy-button" @click="showModal = true">Buy now</button>
-      <div x-show="showModal"  class="modal active">
+      <div x-show="showModal"  class="modal" x-bind:class="showModal?'active':''">
                  <div style="text-align: center; display: flex;gap: 15px;flex-direction: column;">
                     <div>
                         <p>Buy Genesis Passport NFT</p>
@@ -275,8 +278,7 @@
                     </form>
                 </div>
       </div>
-      <div x-show="showModal" class="overlay active" @click="showModal = false"></div>
-
+      <div x-show="showModal" class="overlay" x-bind:class="showModal?'active':''" @click="showModal = false"></div>
       <!-- <br>
       <button class="golden-btn" style="font-size:1.6em; font-weight: bold;" id="buynow">Buy now</button>
 
