--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
       <p>Become a citizen of the Network State Genesis.</p>
 
       <p>Limited edition of 1000, then physical passport will happen.</p>
+
+      <p>In order to purchase please send ETH to the following address.</p>
       
       <br>
 
@@ -254,7 +256,7 @@
 
       <p>Each purchase increases the price by 0.1%</p>
 
-      <p>You can send 0.1 ETH and you'll receive a refund.</p>
+      <p>No requirement to send the exact amount, if you send more you'll receive a refund.</p>
 
     <h3 style="margin-bottom: 10px; font-size: 25px">You can also use 💳</h3>
 
@@ -279,6 +281,11 @@
                 </div>
       </div>
       <div x-show="showModal" class="overlay" x-bind:class="showModal?'active':''" @click="showModal = false"></div>
+
+      <p>Each purchase increases the price by 0.1%</p>
+
+      <p>Not implausible that the number will go up?</p>
+
       <!-- <br>
       <button class="golden-btn" style="font-size:1.6em; font-weight: bold;" id="buynow">Buy now</button>
 
