--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="wrapper">
           <h1 style="margin-bottom: 10px; font-size: 25px">Network State Genesis - Passport NFT</h1>
 
-          <p>Multiplanery<br><br>Extraterrestrial<br><br>Intergalactic<br><br>Hyperdimensional<br><br>From the future 💫</p>
+          <p>Multiplanetary<br><br>Extraterrestrial<br><br>Intergalactic<br><br>Hyperdimensional<br><br>From the future 💫</p>
           
           <img src="Network-State-Genesis-PASSPORT-LATEST.jpg" style="max-width: 100%; border: 1px solid white;">
           
